--- a/Osiris/Osiris.vcxproj.filters
+++ b/Osiris/Osiris.vcxproj.filters
@@ -634,6 +634,15 @@
     <ClInclude Include="InventoryChanger\TournamentMatches.h">
       <Filter>InventoryChanger</Filter>
     </ClInclude>
+    <ClInclude Include="InventoryChanger\GameItemStorage.h">
+      <Filter>InventoryChanger</Filter>
+    </ClInclude>
+    <ClInclude Include="StringPool.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="SDK\KeyValuesSystem.h">
+      <Filter>SDK</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="Resources\Shaders\default_vs.hlsl">
