--- a/Source/Osiris.vcxproj.filters
+++ b/Source/Osiris.vcxproj.filters
@@ -290,6 +290,9 @@
     <ClCompile Include="InventoryChanger\WeaponNames.cpp">
       <Filter>InventoryChanger</Filter>
     </ClCompile>
+    <ClCompile Include="AntiDetection.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GUI.h">
@@ -768,6 +771,9 @@
     </ClInclude>
     <ClInclude Include="InventoryChanger\Backend\StorageUnitManager.h">
       <Filter>InventoryChanger\Backend</Filter>
+    </ClInclude>
+    <ClInclude Include="AntiDetection.h">
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
